--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
             <div>
                 <h1>
-                    Hello, I’m Sebastian.
+                    Hi, I’m Sebastian.
                     <br>A visual designer<br> curious
                     about the world.
                 </h1>
