--- a/about.html
+++ b/about.html
@@ -90,8 +90,10 @@
                 professional career is a bit of luck and a lot of hard work.<br>
 
             </p>
-            <p><strong>My recipe for being a good employee?</strong><br>A high work ethic, sincere commitment,
-                truthfulness, and honesty built the opinion that I am trustworthy and reliable with creative sparkle.
+            <p><strong>My recipe for being a good co-worker and employee?</strong><br>A high work ethic, sincere
+                commitment,
+                truthfulness, helpfulness and honesty built the opinion that I am trustworthy and reliable with creative
+                sparkle.
             </p>
             <p>Since 2015, I have been working as a visual designer and developed a lot of skills, but I do
                 not stop there. I continue to learn and grow just like the world around me. I am up to date with the
