--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
             <div class="hero">
 
                 <div>
-                    <p class="intro p-narrow">​I thrive on the exhilarating journey of crafting
+                    <p class="intro">​I thrive on the exhilarating journey of crafting
                         websites and applications that fuse creativity
                         with functionality. As you explore the treasure trove of projects showcased here, you'll
                         uncover the fruit of the
@@ -68,7 +68,7 @@
 
 
                 <video playsinline autoplay muted loop id="video" media="(max-width:683px)">
-                    <source src="video/home-page-video.mp4" type="video/mp4">
+                    <source src="video/work-video.mp4" type="video/mp4">
                 </video>
             </div>
 
@@ -100,8 +100,8 @@
 
                 <div>
 
-                    <source srcset="img/timbero-pp/timbero@1x/timbero_main@1x.jpg" media="(max-width:767px)">
-                    <img src="img/timbero-pp/timbero@1x/timbero_main@1x.jpg" alt="My Image" class="img-style">
+                    <source srcset="img/main/timbero_main@1x.jpg" media="(max-width:767px)">
+                    <img src="img/main/timbero_main@1x.jpg" alt="timbero-app" class="img-style">
 
                 </div>
 
@@ -110,8 +110,8 @@
 
                 <div>
 
-                    <source srcset="img/toilet-app/toilet@1x/Toilet_finder_main@1x.jpg">
-                    <img src="img/toilet-app/toilet@1x/Toilet_finder_main@1x.jpg" alt="My Image" class="img-style">
+                    <source srcset="img/main/wher-is-toilet-main@1x.jpg">
+                    <img src="img/main/wher-is-toilet-main@1x.jpg" alt="toilet-app" class="img-style">
 
                 </div>
 
@@ -204,7 +204,7 @@
                     </div>
                     <p class="text-footer">or catch me on social media</p>
 
-                    <!--Social Media and Placeholders-->
+                    <!--Social Media-->
                     <div>
 
                         <a href="https://www.behance.net/sebastiankozicki" target="_blank">
@@ -216,7 +216,7 @@
 
                     </div>
                 </div>
-                <div id="verical-menu">
+                <div class="vertical-menu">
                     <a class="bottom-nav" href="index.html">home</a>
                     <a class="bottom-nav" href="work.html">work</a>
                     <a class="bottom-nav" href="about.html">about</a>
