--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@
             <div class="hero">
                 <div>
                     <div>
-                        <p class="intro">I am a UI/web designer with a background in advertising graphics and online
+                        <p class="intro subtitle">I am a UI/web designer with a background in advertising graphics and
+                            online
                             marketing</p>
                     </div>
                     <div>
@@ -373,9 +374,9 @@
         <div class="container">
             <div class="footer-container">
                 <div id="contact-me">
-                    <h4>
+                    <h5>
                         Let's stay in touch
-                    </h4>
+                    </h5>
                     <p class="text-footer">
                         Do you like my work? Don't hesitate and just</p>
                     <div>
@@ -383,7 +384,7 @@
                     </div>
                     <p class="text-footer">or catch me on social media</p>
 
-                    <!--Social Media and Placeholders-->
+                    <!--Social Media-->
                     <div>
 
                         <a href="https://www.behance.net/sebastiankozicki" target="_blank">
@@ -395,7 +396,7 @@
 
                     </div>
                 </div>
-                <div id="verical-menu">
+                <div class="vertical-menu">
                     <a class="bottom-nav" href="index.html">home</a>
                     <a class="bottom-nav" href="work.html">work</a>
                     <a class="bottom-nav" href="about.html">about</a>
