--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
         <div class="container">
             <div>
                 <h1>
-                    Hi, I’m Sebastian.
-                    <br>A visual designer<br> curious
-                    about the world.
+                    Hi, I’m Sebastian.<br>
+                    Visual designer curious about the world and people.
+
                 </h1>
             </div>
 
             <div class="hero">
                 <div>
                     <div>
-                        <p class="intro">Welcome to a showcase that's more than pixels – it's a direct connection to
+                        <p class="intro subtitle">Welcome to a showcase that's more than pixels – it's a direct
+                            connection to
                             the beating
                             pulse
                             of
@@ -3264,9 +3265,9 @@
         <div class="container">
             <div class="footer-container">
                 <div id="contact-me">
-                    <h4>
+                    <h5>
                         Let's stay in touch
-                    </h4>
+                    </h5>
                     <p class="text-footer">
                         Do you like my work? Don't hesitate and just</p>
                     <div>
@@ -3274,7 +3275,7 @@
                     </div>
                     <p class="text-footer">or catch me on social media</p>
 
-                    <!--Social Media and Placeholders-->
+                    <!--Social Media-->
                     <div>
 
                         <a href="https://www.behance.net/sebastiankozicki" target="_blank">
@@ -3286,7 +3287,7 @@
 
                     </div>
                 </div>
-                <div id="verical-menu">
+                <div class="vertical-menu">
                     <a class="bottom-nav" href="index.html">home</a>
                     <a class="bottom-nav" href="work.html">work</a>
                     <a class="bottom-nav" href="about.html">about</a>
