--- a/salomon-app.html
+++ b/salomon-app.html
@@ -687,9 +687,9 @@
         <div class="container">
             <div class="footer-container">
                 <div id="contact-me">
-                    <h4>
+                    <h5>
                         Let's stay in touch
-                    </h4>
+                    </h5>
                     <p class="text-footer">
                         Do you like my work? Don't hesitate and just</p>
                     <div>
@@ -697,7 +697,7 @@
                     </div>
                     <p class="text-footer">or catch me on social media</p>
 
-                    <!--Social Media and Placeholders-->
+                    <!--Social Media-->
                     <div>
 
                         <a href="https://www.behance.net/sebastiankozicki" target="_blank">
@@ -709,7 +709,7 @@
 
                     </div>
                 </div>
-                <div id="verical-menu">
+                <div class="vertical-menu">
                     <a class="bottom-nav" href="index.html">home</a>
                     <a class="bottom-nav" href="work.html">work</a>
                     <a class="bottom-nav" href="about.html">about</a>
