--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
             <div class="hero">
 
                 <div>
-                    <p class="intro">​I thrive on the exhilarating journey of crafting
+                    <p class="intro subtitle">​I thrive on the exhilarating journey of crafting
                         websites and applications that fuse creativity
                         with functionality. As you explore the treasure trove of projects showcased here, you'll
                         uncover the fruit of the
@@ -158,31 +158,34 @@
                 </div>
             </div>
         </div>
-
         <div class="full-width">
-            <div class="container">
 
+            <div class="container">
                 <div class="flex-container">
                     <div>
                         <h2>
-                            Print Design
+                            &amp something extra
                         </h2>
-                        <p class="p-narrow">For over 8 years, I have been involved in visual design, and my journey
-                            began with print design. If you are curious, click the button and see what else I can
-                            design.
-                        </p>
                     </div>
                     <div>
-                        <a class="btn-primary-normal" href="https://www.behance.net/sebastiankozicki"
-                            target="_blank">See
-                            more on Behance</a>
+                        <a class="btn-secondary-normal" href="print.html">Discover more</a>
                     </div>
                 </div>
 
 
+                <p class="">
+                    Since 2015, I have been involved in visual design, and my journey
+                    began with print design. If you are curious, click the button and see what else I can
+                    design.
+                </p>
+
 
             </div>
         </div>
+        </div>
+
+
+
 
 
 
