--- a/salomon-app.html
+++ b/salomon-app.html
@@ -52,12 +52,12 @@
                     <img src="img/svg/arrow_back_24px.svg" alt="" class="img-arrow">
                 </a>
 
-                <h1>
+                <h1 class="h1-project">
                     Salomon Equipment Configurator
                 </h1>
             </div>
-            <div class="hero">
-                <div class="flex-container">
+            <div>
+                <div class="flex-badge">
                     <p class="badge">ui design</p>
                     <p class="badge">native app</p>
                     <p class="badge">android</p>
