correct img display

--- a/about.html
+++ b/about.html
@@ -369,7 +369,7 @@
 
 
                 <div id="additional-text">
-                    <p>Designing gives me a lot of joy and I don't really approach it as my job - lucky me :&#41</p>
+                    <p>Designing gives me a lot of joy, and I don't really think of it as a "job" - lucky me :&#41</p>
                 </div>
             </div>
         </div>
