--- a/salomon-app.html
+++ b/salomon-app.html
@@ -132,7 +132,7 @@
     </div>
     <div class="container">
         
-        <img class="img-other center-img-container" src="img/salomon-app/salomon_@1x/salomon_low_fid_android@1x.png"
+        <img class="img-other center-img-container" src="img/salomon-app/salomon_@2x/low _fidelity_wireframes@2x.png"
             alt="salomon-gesture">
             
         <img class="img-other center-img-container" src="img/salomon-app/salomon_@1x/salomon_low_fid_iOS@1x.jpg"
