--- a/about.html
+++ b/about.html
@@ -17,6 +17,15 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,700;0,6..12,900;1,6..12,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/53c276e98a.js" crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DPJ3K496X3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DPJ3K496X3');
+</script>
 </head>
 
 <body>
