--- a/about.html
+++ b/about.html
@@ -67,9 +67,9 @@
             <div class="hero2">
             
                 <div>
-                    <p class="subtitle">I am a UI/web designer with a background in advertising graphics and
-                        online
-                        marketing</p>
+                    <p class="subtitle">I am a UI and web designer with a background in advertising graphics and online marketing. 
+                        A logically thinking engineer, a conservative barrier avoider, and a lover of black tea.
+                        </p>
                 </div>
                 <div>
                     <a class="btn-primary-normal" href="files/Sebastian-Kozicki-Resume.pdf" target="_blank">Download
@@ -93,25 +93,25 @@
             <h2>In a nutshell</h2>
 
             <p>
-                As a freelancer and agency graphic designer, my ultimate goal is to bring the client's vision to
-                life, no matter the constraints. Innovation and creativity were my tools to surpass expectations and
-                deliver captivating results. I have worked for 8 different industries, preparing all kinds of
+                As a freelancer and agency graphic designer, I aim to bring the client's vision to life, 
+                no matter the constraints. Hard work and creativity are my means to surpass expectations 
+                and deliver captivating results. I have worked for different industries, preparing various 
                 marketing and branding materials.
             </p>
 
             <p>
-                Engineering education, over 4 years in customer service, and over 8 years as a visual designer - my
-                professional career is a bit of luck and a lot of hard work.<br>
+                I got my academic start in Engineering, I have over 4 years of experience in customer 
+                service and over 8 years as a visual designer - my professional career is a combination 
+                of a bit of luck and a lot of hard work.
 
             </p>
-            <p><strong>My recipe for being a good co-worker and employee?</strong><br>A high work ethic, sincere
-                commitment,
-                truthfulness, helpfulness and honesty built the opinion that I am trustworthy and reliable with creative
-                sparkle.
+            <p><strong>My recipe for being a good co-worker and employee?</strong><br>
+                A high work ethic, sincere commitment, truthfulness, helpfulness, and honesty make 
+                me a trustworthy and reliable collaborator with a creative flair.
             </p>
-            <p>Since 2015, I have been working as a visual designer and developed a lot of skills, but I do
-                not stop there. I continue to learn and grow just like the world around me. I am up to date with the
-                news cheering the development of AI and the automation of designers' work.</p>
+            <p>Since 2015, I have been working as a visual designer and developed many skills, 
+                but I do not stop there. I continue to learn and grow just like the world around me. 
+                I am up to date with the news cheering the development of AI and the automation of designers' work.</p>
 
         </div>
         <div class="container-stats">
@@ -255,8 +255,8 @@
                     Education
                 </h5>
                 <p>
-                    Master of Science in Mechanics - Cracow University of Technology; Postgraduates studies:
-                    Advertising Graphics - Tischner European University, Internet Marketing - AGH University of Cracow.
+                    Master of Science in Mechanics - Cracow University of Technology,<br> Postgraduates studies:
+                    Advertising Graphics - Tischner European University,<br> Internet Marketing - AGH University of Cracow.
                 </p>
             </div>
             <div class="facts">
@@ -264,7 +264,7 @@
                     Specialization
                 </h5>
                 <p>
-                    Web &amp; UI design. It's like building Lego - each brick fits somewhere, and my task is to find that
+                    Web &amp; UI design. It's like building Lego - each block fits somewhere, and my task is to find that
                     perfect place.
                 </p>
             </div>
@@ -273,8 +273,8 @@
                     Hobbies &amp; Passions
                 </h5>
                 <p>
-                    Movies, snowboarding, playing Call Of Duty, reading popular science and psychological-social books.
-                    I just like to know how the world works, especially people.
+                    Movies, snowboarding, playing Call Of Duty, reading popular science and 
+                    psychological-social books. I just like to know how the world works, especially people.
                 </p>
             </div>
             <div class="facts">
@@ -378,7 +378,7 @@
 
 
                 <div id="additional-text">
-                    <p>Designing gives me a lot of joy, and I don't really think of it as a "job" - lucky me :&#41;</p>
+                    <p>Designing gives me a lot of joy, and I don't fully treat it as a "job" - lucky me : &#41;</p>
                 </div>
             </div>
         </div>
