--- a/print.html
+++ b/print.html
@@ -72,9 +72,11 @@
             <div class="hero">
 
                 <div>
-                    <p class="subtitle">Designing for print is my first love and one I will never forget. The ability to
-                        touch the material, run your finger over the print, and see it in different lighting conditions
-                        is a feeling that cannot be described in words.</p>
+                    <p class="subtitle">Designing for print is my first love and one I will never forget. 
+                        The ability to touch the material, run your finger over the printed materials, 
+                        and see it in different light conditions is a feeling that cannot be described in words. 
+                        I transferred some of my skills gained in the print projects to the digital world, 
+                        such as composition, typography, color theory, and awareness of the project's surroundings.</p>
 
                 </div>
 
