--- a/work.html
+++ b/work.html
@@ -162,8 +162,8 @@
 
                 <div class="grid-container">
                     <div class="card-container">
-                        <a href="#">
-                        <img src="img/main/aae-main@1x.jpg" alt="aae" class="img-style"></a>
+                        <a href="aae-website.html">
+                        <img src="img/main/aae-main-1@1x.jpg" alt="aae" class="img-style"></a>
         
                             
                             <div class="card-content">
