--- a/print.html
+++ b/print.html
@@ -211,7 +211,7 @@
                 
                     <a href="https://www.behance.net/sebastiankozicki" class="btn-tertiary-normal" target="_blank">See
                         also my Behance
-                        profile</a>
+                        profile &gt;&gt;</a>
                 
 
 
