--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
             <div class="hero2">
             
                 <div>
-                    <p class="subtitle">I am a UI and web designer with a background in advertising graphics and online marketing. 
+                    <p>I am a UI and web designer with a background in advertising graphics and online marketing.<br>
                         A logically thinking engineer, a conservative barrier avoider, and a lover of black tea.
                         </p>
                 </div>
