--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <ul class="navigation">
                         <li><a href="index.html">home</a></li>
                         <li><a href="work.html">work</a></li>
-                        <li><a href="about.html">about</a></li>
+                        <li><a href="about.html">about me</a></li>
                         <li><a href="#contact">contact</a></li>
                         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i
                                     class="fas fa-bars"></i></a></li>
@@ -297,15 +297,15 @@
 
                     <div class="item-border">
                         <h5>Typography</h5>
-                        <a href="https://shadycharacters.co.uk/books/shady-characters-the-book/">"Shady Char­ac­ters:
+                        <a href="https://shadycharacters.co.uk/books/shady-characters-the-book/" target="_blank">"Shady Char­ac­ters:
                             The
                             Secret Life of Punc­tu­ation, Sym­bols, &amp; Other Ty­po­graph­ical Marks"</a>
                         <p> by Keith
                             Houston</p>
-                        <a href="https://shadycharacters.co.uk/books/shady-characters-the-book/">"The Triumph of Typography:
+                        <a href="https://shadycharacters.co.uk/books/shady-characters-the-book/" target="_blank">"The Triumph of Typography:
                             Culture. Communication. New Media"</a>
                         <p>by Henk Hoeks &amp; Ewan Lentjes</p>
-                        <a href="https://www.amazon.com/Typography-Michael-Susan-Wightman-Mitchell/dp/0948021667">
+                        <a href="https://www.amazon.com/Typography-Michael-Susan-Wightman-Mitchell/dp/0948021667" target="_blank">
                             "Book Typography"</a>
                         <p>by Michael Mitchell &amp; Susan Wightman</p>
     
@@ -313,20 +313,20 @@
 
                     <div class="item-border">
                         <h5>Layouts</h5>
-                        <a href="https://www.amazon.com/Grid-systems-graphic-design-communication/dp/3721201450">
+                        <a href="https://www.amazon.com/Grid-systems-graphic-design-communication/dp/3721201450" target="_blank">
                             "Grid systems in graphic design: A visual communication manual for graphic designers,
                             typographers and three dimensional designers"</a>
                         <p>by Josef Müller-Brockmann</p>
                         <a
-                            href="https://www.amazon.com/Structuring-Design-Graphic-Theory-Practice/dp/372120994X/ref=sr_1_1?qid=1695632483&refinements=p_27%3AUlysses+Voelker&s=books&sr=1-1">
+                            href="https://www.amazon.com/Structuring-Design-Graphic-Theory-Practice/dp/372120994X/ref=sr_1_1?qid=1695632483&refinements=p_27%3AUlysses+Voelker&s=books&sr=1-1" target="_blank">
                             "Structuring Design: Graphic Grids in Theory and Practice"</a>
                         <p>by Ulysses Voelker</p>
                         <a
-                            href="https://www.amazon.fr/Grid-Systems-Principles-Organizing-English-ebook/dp/B00JH8H4FK?ref_=ast_author_mpb">
+                            href="https://www.amazon.fr/Grid-Systems-Principles-Organizing-English-ebook/dp/B00JH8H4FK?ref_=ast_author_mpb" target="_blank">
                             "Grid Systems: Principles of Organizing Type" by Kimberly Elam</a>
                         <p>by Kimberly Elam</p>
                         <a
-                            href="https://www.amazon.fr/G%C3%A9om%C3%A9trie-du-design-Kimberly-Elam/dp/2212142250/?_encoding=UTF8&pd_rd_w=TGplb&content-id=amzn1.sym.dcdf4c22-7037-4442-8fdf-d1f78b5e1c63&pf_rd_p=dcdf4c22-7037-4442-8fdf-d1f78b5e1c63&pf_rd_r=258-5346298-8940115&pd_rd_wg=iItzG&pd_rd_r=354d569a-7548-42df-ab19-bcec90948247&ref_=aufs_ap_sc_dsk">
+                            href="https://www.amazon.fr/G%C3%A9om%C3%A9trie-du-design-Kimberly-Elam/dp/2212142250/?_encoding=UTF8&pd_rd_w=TGplb&content-id=amzn1.sym.dcdf4c22-7037-4442-8fdf-d1f78b5e1c63&pf_rd_p=dcdf4c22-7037-4442-8fdf-d1f78b5e1c63&pf_rd_r=258-5346298-8940115&pd_rd_wg=iItzG&pd_rd_r=354d569a-7548-42df-ab19-bcec90948247&ref_=aufs_ap_sc_dsk" target="_blank">
                             Geometry of Design</a>
                         <p>by Kimberly Elam</p>
                     </div>
@@ -334,33 +334,31 @@
                     <div class="item-border">
                         <h5>Other</h5>
                         <a
-                        href="https://www.amazon.fr/Design-Everyday-Things-Revised-Expanded/dp/0465050654/ref=asc_df_0465050654/?tag=googshopfr-21&linkCode=df0&hvadid=194968184059&hvpos=&hvnetw=g&hvrand=13001617647478939110&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9054912&hvtargid=pla-125635921755&psc=1">
+                        href="https://www.amazon.fr/Design-Everyday-Things-Revised-Expanded/dp/0465050654/ref=asc_df_0465050654/?tag=googshopfr-21&linkCode=df0&hvadid=194968184059&hvpos=&hvnetw=g&hvrand=13001617647478939110&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9054912&hvtargid=pla-125635921755&psc=1" target="_blank">
                         "The Design Of Everyday Things"</a>
                     <p>by Don Norman</p>
-                    <a href="https://www.amazon.com/User-Friendly-Hidden-Design-Changing/dp/0374279756">
+                    <a href="https://www.amazon.com/User-Friendly-Hidden-Design-Changing/dp/0374279756" target="_blank">
                         "User Friendly: How the Hidden Rules of Design Are Changing the Way We Live, Work, and Play"</a>
                     <p>by Cliff Kuang &amp; Robert Fabricant</p>
 
                     <a
-                        href="https://www.amazon.com/Laws-UX-Psychology-Products-Services/dp/149205531X/ref=sr_1_1?crid=3JDUDN67JKMX2&keywords=laws+of+ux&qid=1695634505&s=books&sprefix=law+of+ux%2Cstripbooks-intl-ship%2C158&sr=1-1">
+                        href="https://www.amazon.com/Laws-UX-Psychology-Products-Services/dp/149205531X/ref=sr_1_1?crid=3JDUDN67JKMX2&keywords=laws+of+ux&qid=1695634505&s=books&sprefix=law+of+ux%2Cstripbooks-intl-ship%2C158&sr=1-1" target="_blank">
                         "Laws of UX: Using Psychology to Design Better Products &amp; Services"</a>
                     <p>by Jon Yablonski</p>
-                    <a href="https://www.amazon.com/Genius-Design-Penny-Sparke/dp/1590204336">
-                        "The Genius of Design"</a>
-                    <p>by Penny Sparke</p>
-                    <a href="https://www.amazon.com/Genius-Design-Penny-Sparke/dp/1590204336">
+                    
+                    <a href="https://www.amazon.com/Steal-Like-Artist-Things-Creative/dp/0761169253/ref=sr_1_1?crid=11NFKD60BZ4RX&keywords=Steal+Like+an+Artist%3A+10+Things+Nobody+Told+You+About+Being+Creative&qid=1698066580&s=books&sprefix=steal+like+an+artist+10+things+nobody+told+you+about+being+creative%2Cstripbooks-intl-ship%2C507&sr=1-1" target="_blank">
                         "Steal Like an Artist: 10 Things Nobody Told You About Being Creative"</a>
                     <p>by Austin Kleon</p>
                     <a
-                        href="https://www.amazon.com/Thinking-Fast-and-Slow-audiobook/dp/B005Z9GAJG/ref=sr_1_1?crid=2QI2525YPAT70&keywords=daniel+kahneman&qid=1695634651&s=books&sprefix=daniel+kahnema%2Cstripbooks-intl-ship%2C140&sr=1-1">
+                        href="https://www.amazon.com/Thinking-Fast-and-Slow-audiobook/dp/B005Z9GAJG/ref=sr_1_1?crid=2QI2525YPAT70&keywords=daniel+kahneman&qid=1695634651&s=books&sprefix=daniel+kahnema%2Cstripbooks-intl-ship%2C140&sr=1-1" target="_blank">
                         "Thinking, Fast and Slow"</a>
                     <p>by Daniel Kahneman</p>
                     <a
-                        href="https://www.amazon.com/Talking-to-Strangers-audiobook/dp/B07NJCG1XS/ref=sr_1_1?crid=3GMTMBY6W9ZWQ&keywords=malcolm+gladwell&qid=1695634744&s=audible&sprefix=malcolm%2Caudible%2C137&sr=1-1">
+                        href="https://www.amazon.com/Talking-to-Strangers-audiobook/dp/B07NJCG1XS/ref=sr_1_1?crid=3GMTMBY6W9ZWQ&keywords=malcolm+gladwell&qid=1695634744&s=audible&sprefix=malcolm%2Caudible%2C137&sr=1-1" target="_blank">
                         "Talking to Strangers: What We Should Know About the People We Don't Know"</a>
                     <p>by Malcolm Gladwell</p>
                     <a
-                        href="https://www.thriftbooks.com/w/how-many-friends-does-one-person-need-dunbars-number-and-other-evolutionary-quirks_robin-dunbar/861112/#edition=6707154">
+                        href="https://www.thriftbooks.com/w/how-many-friends-does-one-person-need-dunbars-number-and-other-evolutionary-quirks_robin-dunbar/861112/#edition=6707154" target="_blank">
                         "How Many Friends Does One Person Need?: Dunbar's Number and Other Evolutionary Quirks"</a>
                     <p>by Robin Dunbar</p>
                     </div>
