--- a/salomon-app.html
+++ b/salomon-app.html
@@ -429,11 +429,11 @@
 
         
         <!--BANNER-->
-        <div class="full-width-banner">
-            <div class="banner-content">
-                <h5>Next Case Study</h5>
-                <h3>Timbero online shop</h3>
-                <a href="#" class="btn-primary-normal">Next</a>
+        <div id="full-width-banner-1">
+            <div>
+                <a href="toilet-app.html" class="btn-primary-normal">Next</a>
+                <h4>WhereIsToilet App</h4>
+                
             </div>
         </div>
 
