--- a/print.html
+++ b/print.html
@@ -43,7 +43,7 @@
                     <ul class="navigation">
                         <li><a href="index.html">home</a></li>
                         <li><a href="work.html">work</a></li>
-                        <li><a href="about.html">about</a></li>
+                        <li><a href="about.html">about me</a></li>
                         <li><a href="#contact">contact</a></li>
                         <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i
                                     class="fas fa-bars"></i></a></li>
