--- a/via-eurasia.html
+++ b/via-eurasia.html
@@ -85,6 +85,14 @@
         <!--PROJECT OVERVIEW-->
 
         <div class="container">
+
+            <div class="container-2">
+                <div class="img background-img"></div>
+                <div class="img foreground-img"></div>
+                <input type="range" min="1" max="100" value="50" class="slider" name="slider" id="slider">
+                <div class="slider-button"></div>
+            </div>
+
             <div class="grid-container-2">
                 <h2>Project overview</h2>
                 <p>
@@ -156,12 +164,7 @@
                     Below I present 6 screens that I redesigned along with descriptions of what was changed and why.</p>
             </div>
 
-            <div class="container-2">
-                <div class="img background-img"></div>
-                <div class="img foreground-img"></div>
-                <input type="range" min="1" max="100" value="50" class="slider" name="slider" id="slider">
-                <div class="slider-button"></div>
-            </div>
+           
 
             <div class="grid-container-2">
 
@@ -520,7 +523,7 @@
                 to limit yourself to only the guidelines.
                 Still, on the other hand, the limitations allow you to achieve your goals in a given time.
             </p>
-            <p><strong>Simple and logical structure</strong> - sometimes the simple solutions are the hardest to solve.
+            <p><strong>Simple and logical structure</strong> - sometimes the simple solutions are the hardest to find.
             </p>
             <p><strong>The irresistible desire to add more functionalities</strong> - this is entirely unjustified in
                 the business world because it generates additional costs and wastes time.
