--- a/aae-website.html
+++ b/aae-website.html
@@ -329,7 +329,7 @@
         <!--BANNER-->
         <div id="full-width-banner-3">
             <div>
-                <a href="#" class="btn-primary-normal">Next</a>
+                <a href="via-eurasia.html" class="btn-primary-normal">Next</a>
                 <h4>ViaEurasia App</h4>
                 
             </div>
