--- a/toilet-app.html
+++ b/toilet-app.html
@@ -631,7 +631,7 @@ iterations through consultation and conversation with users.
 
         
          <!--BANNER-->
-         <div id="full-width-banner-2">
+         <!-- <div id="full-width-banner-2">
             <div>
                 <a href="#" class="btn-primary-normal">Next</a>
                 <h4>
@@ -640,7 +640,7 @@ iterations through consultation and conversation with users.
                     Online bakery</h4>
                 
             </div>
-        </div>
+        </div> -->
 
 
 
