--- a/via-eurasia.html
+++ b/via-eurasia.html
@@ -535,13 +535,13 @@
 
 
         <!--BANNER-->
-        <!-- <div id="full-width-banner-3">
+        <div id="full-width-banner-4">
             <div>
-                <a href="#" class="btn-primary-normal">Next</a>
-                <h4>ViaEurasia App</h4>
+                <a href="wordpress.html" class="btn-primary-normal">Next</a>
+                <h4>WordPress projects</h4>
                 
             </div>
-        </div> -->
+        </div>
 
 
 
