--- a/work.html
+++ b/work.html
@@ -194,9 +194,9 @@
                     </div>
 
                     <div class="card-container">
-
+<a href="wordpress.html">
                         <img src="img/wordpress/wordpress-main-small.jpg" alt="wordpress" class="img-style">
-   
+   </a>
    
                        <div class="card-content">
                            <p class="text-xs">Web Design</p>
