--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     Hi, I’m Sebastian a <span class="hero_gradientText"> visual designer.</span><br>I create engaging UI &amp; websites.
                 </h1>
                 <div>
-                    <p>Welcome to a portfolio showcase that's more than pixels – it's a direct connection between my design skills and logical thinking. 
+                    <p class="subtitle">Welcome to a portfolio showcase that's more than pixels – it's a direct connection between my design skills and logical thinking. 
                         <br>I use data-driven design solutions, minimalistic and esthetic elements &amp; layouts. 
                         
                     </p>
