--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
             
 
                 
-                    <p>I am passionate about the exciting journey of creating websites and applications 
+                    <p class="subtitle">I am passionate about the exciting journey of creating websites and applications 
                         that combine creativity and functionality. By exploring the projects presented here, 
                         you will discover how I developed over time, what kind of problems I encountered, 
                         and how I overcame them, as well as what type of solutions I implemented.</p>
