--- a/print.html
+++ b/print.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sebastian Kozicki UI Porfolio</title>
+    <title>Sebastian Kozicki Porfolio</title>
     <link href="img/favicon/favicon.ico" rel="shortcut icon">
 
     <link rel="stylesheet" type="text/css"
@@ -181,6 +181,11 @@
                 <div>
                     <img src="img/printing/printing@1x/menu-wesole-2@1x.jpg" alt="menus" class="img-gallery">
                     <p class="text-sm">Menu</p>
+                </div>
+
+                <div>
+                    <img src="img/printing/printing@1x/poster-operafixe@1x.jpg" alt="poster" class="img-gallery">
+                    <p class="text-sm">Poster</p>
                 </div>
 
                 <div>
