--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
                             <h5>WordPress / Webflow</h5>
                         </li>
                         <li class="li-shadow">
-                            <h5>Miro / Trelo / Notion</h5>
+                            <h5>Miro / Trello / Notion</h5>
                         </li>
                     </ul>
                 </div>
@@ -213,19 +213,23 @@
                 <div>
                     <ul>
                         <li class="li-shadow">
-                            <h5>Visual Designer / Creative Consulant</h5>
+                            <h5>Visual Designer / Creative Consulant / Freelancer</h5>
+                            <p> 2015 - present</p>
                             <p class="text-sm">Coaching Consulting Creation</p>
                         </li>
                         <li class="li-shadow">
                             <h5>Team Leader / Printing Technologist</h5>
+                            <p>2016 - 2018 & 2019 - 2021</p>
                             <p class="text-sm">unlimited advertisement &amp; design bySOLARA</p>
                         </li>
                         <li class="li-shadow">
                             <h5>Print &amp; Copy Editing Coordinator</h5>
+                            <p>2019</p>
                             <p class="text-sm">Avon</p>
                         </li>
                         <li class="li-shadow">
                             <h5>Printing Technologist / Production Graphic</h5>
+                            <p>2015 - 2016</p>
                             <p class="text-sm">Extrema</p>
                         </li>
                         
