--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                             <h5>Visual design / typography / color / layout</h5>
                         </li>
                         <li class="li-shadow">
-                            <h5>Front-end / HTML / CSS</h5>
+                            <h5>Front-end: HTML / CSS</h5>
                         </li>
                     </ul>
                 </div>
@@ -196,6 +196,9 @@
                         <li class="li-shadow">
                             <h5>Miro / Trello / Notion</h5>
                         </li>
+                        <li class="li-shadow">
+                            <h5>AI supporting tools: Relume / Uizard Autodesigner / Leonardo.Ai / Chats GPT</h5>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -219,7 +222,7 @@
                         </li>
                         <li class="li-shadow">
                             <h5>Team Leader / Printing Technologist</h5>
-                            <p>2016 - 2018 & 2019 - 2021</p>
+                            <p>2016 - 2018 &amp; 2019 - 2021</p>
                             <p class="text-sm">unlimited advertisement &amp; design bySOLARA</p>
                         </li>
                         <li class="li-shadow">
