--- a/toilet-app.html
+++ b/toilet-app.html
@@ -474,8 +474,7 @@ iterations through consultation and conversation with users.
                     the peak of design, but it serves its functions perfectly.
                 </p>                                           
             </div>
-            <img class="img-other grid-item" src="img/toilet-app/toilet@1x/components-1.png" alt="components">
-            <img class="img-other grid-item" src="img/toilet-app/toilet@1x/components-2.jpg" alt="components">
+        
             <div class="grid-gallery">
                 <div class="grid-col-span-2-gallery">
                     <img class="img-other grid-item" src="img/toilet-app/toilet@1x/moodboard-toilet.jpg" alt="moodboard-toilet">
@@ -483,7 +482,7 @@ iterations through consultation and conversation with users.
                 <div class="grid-col-span-2-gallery">
                     <a href="https://www.figma.com/file/Cz51AoZfPU1a1sAmBmfIe7/Toilet-app?type=design&node-id=20%3A2379&mode=design&t=fiGSkQrgXBc2ULiL-1" target="_blank">
                     <img class="img-other grid-item"
-                                            src="img/toilet-app/toilet@1x/style-guide-toilet.png" alt="style-toilet">
+                                            src="img/toilet-app/toilet@2x/guidlines@2x.png" alt="style-toilet">
                                        </a>
                 </div>
                
