--- a/work.html
+++ b/work.html
@@ -152,7 +152,7 @@
         <div class="container">
             <div class="grid-container-2">
                 <div>
-                    <h2>Micro UI/UX<br> Case Studies</h2></div>
+                    <h2>Micro UI<br>Case Studies</h2></div>
                    <div><p>
                     Sometimes, I am not involved in the whole design process, or 
                     I redesign only part of the existing website or application. 
